--- a/src/styles.css
+++ b/src/styles.css
@@ -124,17 +124,20 @@ h1 {
   --radius: 0px 0px 0px 4px;
 }
 
-.cell.correct {
+.cell.correct,
+.key.correct {
   background: var(--color-success);
   border-color: var(--color-success);
   color: white;
 }
-.cell.incorrect {
+.cell.incorrect,
+.key.incorrect {
   background: var(--color-gray-300);
   border-color: var(--color-gray-300);
   color: white;
 }
-.cell.misplaced {
+.cell.misplaced,
+.key.misplaced {
   background: var(--color-warning);
   border-color: var(--color-warning);
   color: white;
@@ -229,4 +232,28 @@ h1 {
   to {
     transform: translateY(0%);
   }
+}
+
+.keyboard-wrapper {
+  padding-top: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5;
+}
+
+.keyboard {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  gap: 5;
+}
+
+.key {
+  padding: 5px 10px 5px 10px;
+  font-weight: 600;
+  border-radius: 5px;
+  background-color: var(--color-gray-900);
 }
