--- a/src/styles.css
+++ b/src/styles.css
@@ -257,3 +257,11 @@ h1 {
   border-radius: 5px;
   background-color: var(--color-gray-900);
 }
+
+.restartWrapper {
+  margin-top: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
